--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% @books.each do |book| %>
+
+<h1>Books</h1>
+<div>
+  <%= image_tag book.get_image %>
+  <p>Title <%= book.title %></p>
+  <p>Opinion <%= book.body %></p>
+</div>
+<% end %>
