--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <h1>User info</h1>
 <div>
-  <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <h4>name <%= @user.name %></h4>
+  <h4>introduction <%= @user.introduction %></h4
+  <% if @user == current_user %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <% end %>
 </div>
 
 <h1>Books</h1>
@@ -16,6 +20,11 @@
 </div>
 <% end %>
 
-<% if @user == current_user %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-<% end %>
+<h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %><br>
+    <%= f.submit 'Create Book' %>
+  <% end %>
