--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,15 @@
 <h1>Editing Book</h1>
 <%= form_with model: @book do |f| %>
-  <label for="inputTitle">Title</label>
-  <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
-  <label for="inputBody">Opinion</label>
-  <%= f.text_field :body, autofocus: true, id:"inputBody" %>
+  <label for="inputTitle">Title</label><br>
+  <%= f.text_field :title, autofocus: true, id:"inputTitle" %><br>
+  <label for="inputBody">Opinion</label><br>
+  <%= f.text_field :body, autofocus: true, id:"inputBody" %><br>
   <%= f.submit "Update Book" %>
 <% end %>
+
+<li>
+  <%= link_to "Show",book_path(@book) %>
+</li>
+<li>
+  <%= link_to "Back",books_path %>
+</li>
