--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,3 @@
-<h1>top page</h1>
+<h1>welcome to Bookers!!</h1>
+
+<p>In Bookers,<br>you can share and exchange your opinions,inpressions,and emotions<br>about various books!</p>
