--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,41 +6,66 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(@user) %>
-        </li>
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Log in", new_user_session_path %>
-        </li>
-      <% end %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <span>Bookers</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+            <li>
+              <a class="nav-link text-light" href="/"><i class="fa-solid fa-house-chimney" style="color: white;"></i>Home</a>
+            </li>
+            <li class="nav-item">
+              <i class="fa-solid fa-users"></i>
+              <%= link_to "Users", users_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Books", books_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+            </li>
+            <% else %>
+            <li class="nav-item">
+              <%= link_to "Home", root_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "About", about_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign up", new_user_registration_path %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log in", new_user_session_path %>
+            </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-  <%= yield %>
+    <main class="mb-auto">
+    <%= yield %>
+    </main>
+
+    <footer class="bg-white text-black pt-5 pb-4">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+           <p>CopyRight Infratop.inc</p>
+    </footer>
   </body>
 
 </html>
