--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,31 @@
-<h1>Books</h1>
-<% @books.each do |book| %>
+<!DOCTYPE html>
+<html>
+  <body>
+    <main>
+      <div class="container px-5 px-sm-0">
+        <div class="row">
+          <div class="col-md-3">
+            <h2>User info</h2>
 
-<div>
-  <%= image_tag book.get_image %>
-  <p>Title <%= book.title %></p>
-  <p>Opinion <%= book.body %></p>
-</div>
-<% end %>
+          </div>
+          <table class="table">
+            <tbody>
+              <tr></tr>
+              <tr>
+                <th>name <%= @user.name %></th>
+              </tr>
+              <tr>
+                <th>introduction <%= @user.introduction %></th>
+              </tr>
+            </tbody>
+          </table>
+          <div class="row">
+            <a class="btn btn-outline-secondary btn-block edit_user_id" href="/users/:id/edit">
+              <i class="fas fa-user-gear"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
