--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,17 @@
-<h1>About</h1>
+<!DOCTYPE html>
+<html>
+  <body>
+    <main>
+      <dic class="container">
+        <div class="row">
+          <h1 class="px-3 mx-auto">
+            Welcome to
+            <i class="fas fa-book"></i>
+            <strong>Bookers</strong>
+            !
+          </h1>
+        </div>
+      </dic>
+    </main>
+  </body>
+</html>
