--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,30 +25,29 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
             <li>
-              <a class="nav-link text-light" href="/"><i class="fa-solid fa-house-chimney" style="color: white;"></i>Home</a>
+              <a class="nav-link text-light" href="/"><i class="fas fa-home"></i>Home</a>
             </li>
-            <li class="nav-item">
-              <i class="fa-solid fa-users"></i>
-              <%= link_to "Users", users_path %>
+            <li>
+              <a class="nav-link text-light" href="/users"><i class="fas fa-users"></i>Users</a>
             </li>
-            <li class="nav-item">
-              <%= link_to "Books", books_path %>
+            <li>
+              <a class="nav-link text-light" href="/books"><i class="fas fa-book-open-cover"></i>Books</a>
             </li>
-            <li class="nav-item">
-              <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+            <li>
+              <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"><i class="fas fa-right-from-bracket"></i>Log out</a>
             </li>
             <% else %>
-            <li class="nav-item">
-              <%= link_to "Home", root_path %>
+            <li>
+              <a class="nav-link text-light" href="/"><i class="fas fa-home"></i>Home</a>
             </li>
-            <li class="nav-item">
-              <%= link_to "About", about_path %>
+            <li>
+              <a class="nav-link text-light" href="/homes/about"><i class="fas fa-link"></i>About</a>
             </li>
-            <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path %>
+            <li>
+              <a class="nav-link text-light" href="/users/sign_up"><i class="fas fa-user-plus"></i>Sign up</a>
             </li>
-            <li class="nav-item">
-              <%= link_to "Log in", new_user_session_path %>
+            <li>
+              <a class="nav-link text-light" href="/users/sign_in"><i class="fas fa-right-to-bracket"></i>Log in</a>
             </li>
             <% end %>
             </ul>
@@ -60,11 +59,14 @@
     <%= yield %>
     </main>
 
-    <footer class="bg-white text-black pt-5 pb-4">
-      <div class="container">
-        <div class="row no-gutters">
-          <div class="col-md-4">
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 
