--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,16 +6,16 @@
         <div class="row">
           <div class="col-md-3">
             <h2>User info</h2>
-
+            <%= image_tag current_user.get_profile_image(100,100) %>
           </div>
           <table class="table">
             <tbody>
               <tr></tr>
               <tr>
-                <th>name <%= @user.name %></th>
+                <th>name <%= current_user.name %></th>
               </tr>
               <tr>
-                <th>introduction <%= @user.introduction %></th>
+                <th>introduction <%= current_user.introduction %></th>
               </tr>
             </tbody>
           </table>
@@ -24,6 +24,17 @@
               <i class="fas fa-user-gear"></i>
             </a>
           </div>
+          <h2 class="mt-3">New book</h2>
+            <%= form_with model: @book do |f| %>
+              <h4>Title</h4>
+               <%= f.text_field :title %>
+              <h4>Opinion</h4>
+               <%= f.text_area :body %><br>
+              <%= f.submit 'Create Book' %>
+            <% end %>
+            <div class="col-md-8 offset-md-1">
+              <h2>Books</h2>
+            </div>
         </div>
       </div>
     </main>
