--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,9 +20,9 @@
             </tbody>
           </table>
           <div class="row">
-            <a class="btn btn-outline-secondary btn-block edit_user_id" href="/users/:id/edit">
+            <%= link_to edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
               <i class="fas fa-user-gear"></i>
-            </a>
+            <% end %>
           </div>
           <h2 class="mt-3">New book</h2>
             <%= form_with model: @book do |f| %>
@@ -30,7 +30,7 @@
                <%= f.text_field :title %>
               <h4>Opinion</h4>
                <%= f.text_area :body %><br>
-              <%= f.submit 'Create Book' %>
+              <%= f.submit 'Create Book', class:"btn btn-success" %>
             <% end %>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
