--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
             <li>
-              <a class="nav-link text-light" href="/"><i class="fas fa-home"></i>Home</a>
+              <a class="nav-link text-light" href="/users/:id"><i class="fas fa-home"></i>Home</a>
             </li>
             <li>
               <a class="nav-link text-light" href="/users"><i class="fas fa-users"></i>Users</a>
