--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>User info</h1>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Image</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction" %>
-  <%= f.submit "Update User" %>
-<% end %>
+<!DOCTYPE html>
+<html>
+  <body>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            <h1>User info</h1>
+              <%= form_with model: @user do |f| %>
+                <label for="inputName">Name</label><br>
+                  <%= f.text_field :name, autofocus: true, id:"inputName", class:"form-control", placeholder:"名前"%><br>
+                <label for="inputImage">Image</label><br>
+                  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %><br>
+                <label for="inputIntroduction">Introduction</label><br>
+                  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", class:"form-control" %><br>
+                  <%= f.submit "Update User", class:"btn btn-secondary" %>
+              <% end %>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
