--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,21 @@
   box-sizing: border-box;
 }
 
+.table {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+table {
+  text-indent: initial;
+  border-spacing: 2px;
+}
+
+.table td, .table th {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
