--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,33 +7,53 @@
           <div class="col-md-3">
             <h2>User info</h2>
             <%= image_tag current_user.get_profile_image(100,100) %>
-          </div>
           <table class="table">
             <tbody>
               <tr></tr>
               <tr>
-                <th>name <%= current_user.name %></th>
+                <th>name</th>
+                <th><%= current_user.name %></th>
               </tr>
               <tr>
-                <th>introduction <%= current_user.introduction %></th>
+                <th>introduction</th>
+                <th><%= current_user.introduction %></th>
               </tr>
             </tbody>
           </table>
           <div class="row">
             <%= link_to edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
-              <i class="fas fa-user-gear"></i>
+              <i class="fas fa-user-cog"></i>
             <% end %>
           </div>
           <h2 class="mt-3">New book</h2>
             <%= form_with model: @book do |f| %>
-              <h4>Title</h4>
-               <%= f.text_field :title %>
-              <h4>Opinion</h4>
-               <%= f.text_area :body %><br>
+              <h6>Title</h6>
+               <%= f.text_field :title, class:"form-control" %>
+              <h6>Opinion</h6>
+               <%= f.text_area :body, class:"form-control" %><br>
               <%= f.submit 'Create Book', class:"btn btn-success" %>
             <% end %>
+          </div>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
+              <table class="table table-hover table-inverse">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>Title</th>
+                    <th>Opinion</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <%= @users.each do |user| %>
+                  <tr>
+                    <td>
+                      <%= image_tag user.get_profile_image(100,100) %>
+                    </td>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
             </div>
         </div>
       </div>
