--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,10 @@
               <a class="nav-link text-light" href="/users"><i class="fas fa-users"></i>Users</a>
             </li>
             <li>
-              <a class="nav-link text-light" href="/books"><i class="fas fa-book-open-cover"></i>Books</a>
+              <a class="nav-link text-light" href="/books"><i class="fas fa-book-open"></i>Books</a>
             </li>
             <li>
-              <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"><i class="fas fa-right-from-bracket"></i>Log out</a>
+              <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"><i class="fas fa-sign-out-alt"></i>Log out</a>
             </li>
             <% else %>
             <li>
@@ -47,7 +47,7 @@
               <a class="nav-link text-light" href="/users/sign_up"><i class="fas fa-user-plus"></i>Sign up</a>
             </li>
             <li>
-              <a class="nav-link text-light" href="/users/sign_in"><i class="fas fa-right-to-bracket"></i>Log in</a>
+              <a class="nav-link text-light" href="/users/sign_in"><i class="fas fa-sign-in-alt"></i>Log in</a>
             </li>
             <% end %>
             </ul>
