--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,36 +4,7 @@
     <main>
       <div class="container px-5 px-sm-0">
         <div class="row">
-          <div class="col-md-3">
-            <h2>User info</h2>
-            <%= image_tag current_user.get_profile_image(100,100) %>
-          <table class="table">
-            <tbody>
-              <tr></tr>
-              <tr>
-                <th>name</th>
-                <th><%= current_user.name %></th>
-              </tr>
-              <tr>
-                <th>introduction</th>
-                <th><%= current_user.introduction %></th>
-              </tr>
-            </tbody>
-          </table>
-          <div class="row">
-            <%= link_to edit_user_path(current_user), class:"btn btn-outline-secondary btn-block" do %>
-              <i class="fas fa-user-cog"></i>
-            <% end %>
-          </div>
-          <h2 class="mt-3">New book</h2>
-            <%= form_with model: @book do |f| %>
-              <h6>Title</h6>
-               <%= f.text_field :title, class:"form-control" %>
-              <h6>Opinion</h6>
-               <%= f.text_area :body, class:"form-control" %><br>
-              <%= f.submit 'Create Book', class:"btn btn-success" %>
-            <% end %>
-          </div>
+          <%= render 'userinfo', book: @book %>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
               <table class="table table-hover table-inverse">
@@ -45,16 +16,26 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <%= @users.each do |user| %>
+                  <% @books.each do |book| %>
                   <tr>
                     <td>
-                      <%= image_tag user.get_profile_image(100,100) %>
+                      <%= link_to user_path(@users) do %>
+                        <%= image_tag book.user.get_profile_image(100,100) %>
+                      <% end %>
+                    </td>
+                    <td>
+                      <%= link_to book_path(book.id) do %>
+                        <%= book.title %>
+                      <% end %>
+                    </td>
+                    <td>
+                      <%= book.body %>
                     </td>
                   </tr>
                   <% end %>
                 </tbody>
               </table>
-            </div>
+          </div>
         </div>
       </div>
     </main>
