--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,16 @@
-<h1>Book detail</h1>
-<div>
-  <%= image_tag @book.get_profile_image(100,100) %>
-  <p><%= @book.title %></p>
-  <p><%= @book.body %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "Edit", edit_book_path(@book.id) %>
-    <%= link_to "Destroy", book_path(@book.id), method: :delete %>
-  <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'userinfo', book: @book %>
+
+    <h1>Book detail</h1>
+    <div>
+      <%= image_tag @book.get_profile_image(100,100) %>
+      <p><%= @book.title %></p>
+      <p><%= @book.body %></p>
+      <% if @book.user == current_user %>
+        <%= link_to "Edit", edit_book_path(@book.id) %>
+        <%= link_to "Destroy", book_path(@book.id), method: :delete %>
+      <% end %>
+    </div>
+  </div>
 </div>
