--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,5 @@
-<h1>User info</h1>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h4>name <%= @user.name %></h4>
-  <h4>introduction <%= @user.introduction %></h4
-  <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'books/userinfo', book: @book %>
+  </div>
 </div>
-
-<h1>Books</h1>
-<% @books.each do |book| %>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <p>Title</p>
-  <%= link_to book_path(book.id) do %>
-    <%= book.title %>
-  <% end %>
-  <p>Opinion <%= book.body %></p>
-</div>
-<% end %>
-
-<h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %><br>
-    <%= f.submit 'Create Book' %>
-  <% end %>
