--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,9 +2,12 @@
 <html>
   <body>
     <main>
+      <p id="notice">
+        <%= notice %>
+      </p>
       <div class="container px-5 px-sm-0">
         <div class="row">
-          <%= render 'userinfo', book: @book %>
+          <%= render 'userinfo', book: @book_new %>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
               <table class="table table-hover table-inverse">
@@ -19,7 +22,7 @@
                   <% @books.each do |book| %>
                   <tr>
                     <td>
-                      <%= link_to user_path(book.id) do %>
+                      <%= link_to user_path(@user.id) do %>
                         <%= image_tag book.user.get_profile_image(100,100) %>
                       <% end %>
                     </td>
