--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
+<p id="notice">
+  <%= notice %>
+</p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'books/userinfo', book: @book %>
+    <%= render 'books/userinfo', book: @book_new %>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
