--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'books/userinfo', book: @book %>
+    <%= render 'books/userinfo', book: @book_new %>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
@@ -18,7 +18,7 @@
           <% @books.each do |book| %>
           <tr>
             <td>
-              <%= link_to user_path(book.id) do %>
+              <%= link_to user_path(@user.id) do %>
                 <%= image_tag book.user.get_profile_image(100,100) %>
               <% end %>
             </td>
