--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -1,16 +1,16 @@
       <div class="col-md-3">
         <h2>User info</h2>
-          <%= image_tag current_user.get_profile_image(100,100) %>
+          <%= image_tag book.user.get_profile_image(100,100) %>
           <table class="table">
             <tbody>
               <tr></tr>
               <tr>
                 <th>name</th>
-                <th><%= current_user.name %></th>
+                <th><%= book.user.name %></th>
               </tr>
               <tr>
                 <th>introduction</th>
-                <th><%= current_user.introduction %></th>
+                <th><%= book.user.introduction %></th>
               </tr>
             </tbody>
           </table>
@@ -20,7 +20,7 @@
             <% end %>
           </div>
           <h2 class="mt-3">New book</h2>
-            <%= form_with model: book do |f| %>
+            <%= form_with model: book_new do |f| %>
               <h6>Title</h6>
                <%= f.text_field :title, class:"form-control" %>
               <h6>Opinion</h6>
