--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,6 +7,14 @@
         <div class="row">
           <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
             <h1>Editing Book</h1>
+              <% if @book.errors.any? %>
+              <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+                <ul>
+                <% @book.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+                </ul>
+              <% end %>
               <%= form_with model: @book do |f| %>
                 <label for="inputTitle">Title</label><br>
                   <%= f.text_field :title, autofocus: true, id:"inputTitle", class:"form-control" %><br>
