--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,8 +6,16 @@
         <%= notice %>
       </p>
       <div class="container px-5 px-sm-0">
+        <% if @book.errors.any? %>
+        <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+          <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        <% end %>
         <div class="row">
-          <%= render 'userinfo', book: @book_new %>
+          <%= render 'userinfo', book_new: @book_new, book: @book %>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
               <table class="table table-hover table-inverse">
