--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 </p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'books/userinfo', book: @book_new %>
+    <%= render '/books/userinfo', book_new: @book_new, book: @book %>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
