--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 </p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'userinfo', book_new: @book_new, book: @book %>
+    <%= render 'userinfo', book_new: @book_new, book: @book, user: @user %>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
       <table class="table">
