--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
           </ul>
         <% end %>
         <div class="row">
-          <%= render 'userinfo', book_new: @book_new, book: @book %>
+          <%= render 'userinfo', book_new: @book_new, book: @book, user: current_user %>
             <div class="col-md-8 offset-md-1">
               <h2>Books</h2>
               <table class="table table-hover table-inverse">
