--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 </p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render '/books/userinfo', book_new: @book_new, book: @book %>
+    <%= render '/books/userinfo', book_new: @book_new, book: @book, user: current_user %>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
