--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <% if user_signed_in? %>
             <li>
               <%= link_to user_path(current_user),class:"nav-link text-light" do %>
-              <i class="fas fa-home"></i>Home
+              <i class="fas fa-home">Home</i>
               <% end %>
             </li>
             <li>
